# cv-datalib

./: README.md  pyproject.toml  setup.cfg
src/cv_datalib/: __init__.py  annotation.py  data_image.py  dataset.py  export.py  image.py  load.py  loader.py  pipeline.py  transform.py
tests/: test_dummy.py
