[metadata]
name = "cv-datalib-jakub-hejhal"
version = "0.0.1"
author = "Jakub Hejhal"
author_email = "kubic71@gmail.com"
description = "CV Datalib"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls = https://github.com/kubic71/cv-datalib
    Bug Tracker = https://github.com/kubic71/cv-datalib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
